--- a/Menu.css
+++ b/Menu.css
@@ -159,13 +159,17 @@ body img {
     align-items: center;
     background-color: #1d1a14;
     border-radius: 7px;
-    width: 15dvw;
-    height: 47.5dvh;
+    width: 12.5dvw;
+    min-width: 125px;
+    height: 525px;
     border-color: #c0c0c0;
 }
 #scene h2, #scene a {
-    width: 100%;
-    height: 4dvh;
+    height: 47px;
+    min-height: 42px;
+}
+#scene h2 {
+    font-size:calc(15px + 0.5vw);
 }
 #scene a {
     color: #c0c0c0;
@@ -173,8 +177,8 @@ body img {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 12.5dvw;
-    font-size: 1.25em;
+    width: 80%;
+    font-size:calc(9px + 0.5vw);
     border-style: solid;
     border-color: #c0c0c0;
     border-radius: 5px;
@@ -187,6 +191,6 @@ body img {
     text-decoration: underline;
     text-align: center;
 }
-#render {
-    margin-top: 2vh;
+#sceneTitle {
+    margin-top: 30px;
 }
